--- a/qml.qrc
+++ b/qml.qrc
@@ -7,5 +7,6 @@
         <file>cube.obj</file>
         <file>grid_moved.obj</file>
         <file>texture.png</file>
+        <file>SimpleMaterial.qml</file>
     </qresource>
 </RCC>
